[package]
name = "process_folder"
version = "0.1.0"
authors = ["karthick"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
sqlx = { version="0.3.5", default-features=false, features=["runtime-async-std","macros","sqlite"] }
async-std = { version="1.6.2", features=["attributes"] }
sqlite_data = { path="../sqlite_data" }
multitask = { version="0.2.0" }