[package]
name = "server"
version = "0.1.0"
authors = ["pkarthick"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = "1.1.1"
actix-web = "3.2.0"
actix-cors = "0.5.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8.1"
futures = "0.3.5"
chrono="0.4.11"
fs_utilities = { path="../fs_utilities" }
