[package]
name = "server-warp"
version = "0.1.0"
authors = ["pkarthick"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http="0.2.1"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
chrono="0.4.11"
log = "0.4"
env_logger = "0.8.1"
pretty_env_logger = "0.4"
fs_utilities = { path="../fs_utilities" }

[dev-dependencies]
pretty_env_logger = "0.4"